# cps-sentinel

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SHOWCASE.md  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  nicegui_app.py  streamlit_app.py
config/: default.yaml
config/scenarios/: battery-actuator-manipulation.yaml  battery-command-delay.yaml  battery-efficiency-loss.yaml  pv-false-data-injection.yaml  pv-replay-attack.yaml  pv-sensor-failure.yaml  pv-sensor-freeze.yaml  pv-sensor-noise-fault.yaml
data/raw/itrust/: README.md
data/raw/nasa/: README.md
docs/: architecture.md  cv-project-summary.md  demo-guide.md  demo-walkthrough.md  phase-1-simulator.md  phase-10-dashboard-polish.md  phase-11-reproducible-demo.md  phase-12-portfolio-polish.md  phase-13-incident-report.md  phase-14-scenario-benchmark.md  phase-15-showcase-guide.md  phase-2-digital-twin.md  phase-3-scenarios.md  phase-4-detection.md  phase-5-risk-response.md  phase-6-dashboard.md  phase-7-nasa-health.md  phase-8-swat-security.md  phase-9-unified-operations.md  project-brief.md  technical-overview.md
notebooks/: README.md
src/cps_sentinel/: __init__.py  __main__.py  benchmark.py  config.py  dashboard.py  demo.py  incident_report.py  plot_style.py
src/cps_sentinel/detection/: __init__.py  (+6 more)
tests/: test_cli.py  test_config.py  test_plot_spacing.py
tests/dashboard/: test_dashboard.py
tests/detection/: test_detection.py
tests/health/: test_health.py
tests/risk/: test_risk.py
tests/scenarios/: test_scenarios.py
tests/simulation/: test_battery.py  test_controller.py  test_simulator.py
tests/swat/: test_swat.py
tests/twin/: test_digital_twin.py
(+25 files in other folders)
