[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "cps-sentinel"
version = "0.1.0"
description = "Digital twin-based security and health monitoring for cyber-physical systems."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "MIT" }
authors = [{ name = "Alex Vryonides" }]
keywords = ["cyber-physical-systems", "digital-twin", "anomaly-detection", "nanogrid"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "numpy>=1.26,<3",
  "pandas>=2.2,<3",
  "plotly>=5.24,<7",
  "pyyaml>=6.0,<7",
  "scikit-learn>=1.5,<2",
  "streamlit>=1.40,<2",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.13,<2",
  "pandas-stubs>=2.2",
  "pytest>=8.3,<9",
  "pytest-cov>=6,<8",
  "ruff>=0.8,<1",
  "types-PyYAML>=6.0",
]

[project.scripts]
cps-sentinel = "cps_sentinel.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cps_sentinel"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers -q"
testpaths = ["tests"]

[tool.coverage.run]
source = ["cps_sentinel"]
branch = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["cps_sentinel"]

[[tool.mypy.overrides]]
module = ["plotly", "plotly.*"]
ignore_missing_imports = true
